[gd_scene load_steps=2 format=3 uid="uid://bncfm42uy2a7x"]

[ext_resource type="Script" path="res://src/player/states/fall.gd" id="1_a3ice"]

[node name="FALL" type="Node"]
script = ExtResource("1_a3ice")

[node name="CoyoteTime" type="Timer" parent="."]

[node name="JumpBuffer" type="Timer" parent="."]

[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
